<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_lg"
    android:background="@color/color_bg_card">

    <TextView
        android:id="@+id/tvPinDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_dialog_title"
        android:textAppearance="@style/TextAppearance.Grandma.CardName"
        android:textColor="@color/color_text_primary" />

    <TextView
        android:id="@+id/tvPinDialogSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/pin_dialog_subtitle"
        android:textAppearance="@style/TextAppearance.Grandma.LabelLarge"
        android:textColor="@color/color_text_secondary" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPinInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter 4-digit PIN"
            android:textSize="22sp"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPinError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/pin_dialog_error"
        android:textColor="@color/color_sos_red"
        android:textSize="14sp"
        android:visibility="gone" />

</LinearLayout>
